--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "seed": "node ./db/seed.js"
+    "seed": "node ./db/seed.js",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -19,5 +20,9 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "eslint": "^9.1.1",
+    "globals": "^15.1.0"
   }
 }
